# FEM_2d

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  FEM_2d_Studio.spec  FIX_GUI_ERRORS.md  GUI_QUICK_REFERENCE.md  GUI_USAGE.md  INSTALL_DEPENDENCIES.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  QUICKSTART_Windows.md  README.md  RELEASE_NOTES.md  SOLUTION_SUMMARY.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  WINDOWS_DLL_ERROR.md  barsystem.cpp  barsystem.h  build_exe.ps1  diagnose.py  example_continuous_beam.txt  example_multi_story_frame.txt  example_truss_bridge.txt  fix_dll_error.bat  fix_dll_error.ps1  quick_start_gui.py  setup_cx.py  start_gui.bat  test05.txt  test_beam.txt  修复DLL错误.bat  修复依赖问题.md  启动GUI.bat  安装依赖.bat
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
python/: fem_gui.py  pyfem_bindings.cpp  test_api.py
python/fem2d/: __init__.py  model_ctypes.py
python/gui/: __init__.py  fem_parser.py  main_window.py  theme.py  visualization.py
scripts/: build_and_test.ps1  build_and_test.sh  run_gui.bat  run_gui.ps1  run_gui_test.py  run_release.bat  run_visualize.bat  visualize_results.py
src/: fem_api.cpp  fem_api.h  fem_core.cpp  fem_core.h  fem_types.h
tests/: test_basic.cpp
